# PPGEE-LocalizacaoRobotica-Exercicios

./: Dockerfile  atv01_kb.sh  atv01_script.sh  atv02.sh
.devcontainer/: devcontainer.json
Atividade_01/src/: CMakeLists.txt
Atividade_01/src/bags/: script.bag
Atividade_01/src/config/: lar_husky.rviz
Atividade_01/src/launch/: lar_husky_keyboard.launch  lar_husky_script.launch
Atividade_01/src/scripts/: husky_circular.py
Atividade_02/src/: CMakeLists.txt  husky_accessories.sh  package.xml
Atividade_02/src/bags/: odom_diff.bag
Atividade_02/src/config/: lar_husky.rviz
Atividade_02/src/launch/: lar_husky_amcl.launch  lar_world.launch
Atividade_02/src/scripts/: odom_diff.py
Atividade_02/src/worlds/: lar.world
