<?xml version="1.0"?>
<package format="2">
  <name>lar_odom_diff</name>
  <version>1.0.0</version>
  <description>The lar_odom_diff package</description>

  <maintainer email="andre.paiva@ufba.br">André Paiva Conrado Rodrigues</maintainer>

  <license>MIT</license>
  <url type="website">https://github.com/ericksuzart/lar_odom_diff</url>
  <author email="andre.paiva@ufba.br">André Paiva Conrado Rodrigues</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>hector_geotiff_launch</exec_depend>
  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>hector_slam</exec_depend>
  <exec_depend>husky_gazebo</exec_depend>
  <exec_depend>husky_navigation</exec_depend>
  <exec_depend>rviz</exec_depend>

  <test_depend>roslaunch</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!--export path of models to gazebo enviroment-->
    <gazebo_ros
        gazebo_plugin_path="${prefix}/lib"
        gazebo_model_path="${prefix}/models" />
  </export>
</package>
